terminado primer cd

--- a/Registro.html
+++ b/Registro.html
@@ -21,7 +21,7 @@
             </li>
         </ul>
     </div>
-    <form action="" id="survey-form">
+    <form action="ezequielclara1@gmail.com" id="survey-form" method="post">
         <img src="red hot.jpg" alt="esta pero no esta">
         <fieldset>
             <p><b>ESCRIBE TUS DATOS A CONTINUACION</b></p>
