--- a/discografias.html
+++ b/discografias.html
@@ -22,67 +22,71 @@
             </li>
         </ul>
     </div>
-    <main>
-        <div class="discos">
+    <main class="pagina_principal">
+        <div id="imagen_principal">
             <a href="CD1.html"><img src="CD1.jpg" alt=""></a>
             <legend>The Red Hot Chili Peppers</legend>
-            <p>Para mas informacion del disco y escucharlo clic en la imagen</p>
+            <p id="descrpcion_prin">Para mas informacion del disco y escucharlo clic en la imagen</p>
         </div>
-        <div class="discos">
+        <div id="imagen_principal">
             <a href="CD2.html"><img src="CD2.jpg" alt=""></a>
             <legend>Freaky Styley</legend>
-            <p>Para mas informacion del disco y escucharlo clic en la imagen</p>
+            <p id="descrpcion_prin">Para mas informacion del disco y escucharlo clic en la imagen</p>
         </div>
-        <div>
+        <div id="imagen_principal">
             <a href="CD3.html"><img src="CD3.jpg" alt=""></a>
             <legend>The uplift Mofo Party Plan</legend>
-            <p>Para mas informacion del disco y escucharlo clic en la imagen</p>
+            <p id="descrpcion_prin">Para mas informacion del disco y escucharlo clic en la imagen</p>
         </div>
-        <div>
+        <div id="imagen_principal">
             <a href="CD4.html"><img src="CD4.jpg" alt=""></a>
             <legend>Mother´s Milk</legend>
-            <p>Para mas informacion del disco y escucharlo clic en la imagen</p>
+            <p id="descrpcion_prin">Para mas informacion del disco y escucharlo clic en la imagen</p>
         </div>
-        <div>
+        <div id="imagen_principal">
             <a href="CD5.html"><img src="CD5.jpg" alt=""></a>
             <legend>Blood Sugar Sex Magik</legend>
-            <p>Para mas informacion del disco y escucharlo clic en la imagen</p>
+            <p id="descrpcion_prin">Para mas informacion del disco y escucharlo clic en la imagen</p>
         </div>
-        <div>
+        <div id="imagen_principal">
             <a href="CD6.html"><img src="CD6.jpg" alt=""></a>
             <legend>One Hot Minute</legend>
-            <p>Para mas informacion del disco y escucharlo clic en la imagen</p>
+            <p id="descrpcion_prin">Para mas informacion del disco y escucharlo clic en la imagen</p>
         </div>
-        <div>
+        <div id="imagen_principal">
             <a href="CD7.html"><img src="CD7.jpg" alt=""></a>
             <legend>Californication</legend>
-            <p>Para mas informacion del disco y escucharlo clic en la imagen</p>
+            <p id="descrpcion_prin">Para mas informacion del disco y escucharlo clic en la imagen</p>
         </div>
-        <div>
+        <div id="imagen_principal">
             <a href="CD8.html"><img src="CD8.jpg" alt=""></a>
             <legend>By The Way</legend>
-            <p>Para mas informacion del disco y escucharlo clic en la imagen</p>
+            <p id="descrpcion_prin">Para mas informacion del disco y escucharlo clic en la imagen</p>
         </div>
-        <div>
+        <div id="imagen_principal">
             <a href="CD9.html"><img src="CD9.jpg" alt=""></a>
             <legend>Stadium Arcadium</legend>
-            <p>Para mas informacion del disco y escucharlo clic en la imagen</p>
+            <p id="descrpcion_prin">Para mas informacion del disco y escucharlo clic en la imagen</p>
         </div>
-        <div>
+        <div id="imagen_principal">
+            <a href="CD10.html"><img src="CD10.jpg" alt=""></a>
             <legend>I´m With You</legend>
-            <p>Para mas informacion del disco y escucharlo clic en la imagen</p>
+            <p id="descrpcion_prin">Para mas informacion del disco y escucharlo clic en la imagen</p>
         </div>
-        <div>
+        <div id="imagen_principal">
+            <a href="CD11.html"><img src="CD11.jpg" alt=""></a>
             <legend>The Getaway</legend>
-            <p>Para mas informacion del disco y escucharlo clic en la imagen</p>
+            <p id="descrpcion_prin">Para mas informacion del disco y escucharlo clic en la imagen</p>
         </div>
-        <div>
+        <div id="imagen_principal">
+            <a href="CD12.html"><img src="CD12.jpg" alt=""></a>
             <legend>Unlimited Love</legend>
-            <p>Para mas informacion del disco y escucharlo clic en la imagen</p>
+            <p id="descrpcion_prin">Para mas informacion del disco y escucharlo clic en la imagen</p>
         </div>
-        <div>
+        <div id="imagen_principal">
+            <a href="CD13.html"><img src="CD13.jpg" alt=""></a>
             <legend>Return Of The Dream Canteen</legend>
-            <p>Para mas informacion del disco y escucharlo clic en la imagen</p>
+            <p id="descrpcion_prin">Para mas informacion del disco y escucharlo clic en la imagen</p>
         </div>
     </main>
 
