--- a/Principal.html
+++ b/Principal.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="static/css/styles.css">
     <title>RHCP</title>
 </head>
 <body>
@@ -14,9 +14,9 @@
             <li>
                 <a href="Principal.html">PAGINA PRINCIPAL</a>
                 <ul>
-                    <li><a href="Registro.html">REGISTRATE</a></li>
+                    <li><a href="templates/Registro.html">REGISTRATE</a></li>
                     <li><a href="#">INTEGRANTES</a></li>
-                    <li><a href="discografias.html">DISCOGRAFIA</a></li>
+                    <li><a href="templates/discografias.html">DISCOGRAFIA</a></li>
                     <li><a href="#">RECITALES</a></li>
                 </ul>
             </li>
@@ -25,22 +25,22 @@
     <!--MENU DE OPCIONES-->
     <main class="pagina_principal">
         <div id="imagen_principal">
-            <a href="Registro.html"><img src="red hot.jpg" alt=""></a>
+            <a href="templates/Registro.html"><img src="static/img/red hot.jpg" alt=""></a>
             <legend>REGISTRATE</legend>
             <p id="descrpcion_prin">Registrate en esta pagina para obtener actualidades de esta banda las 24hs.</p>
         </div>
         <div id="imagen_principal">
-            <a href="discografias.html"><img src="discografia.jpg" alt=""></a>
+            <a href="templates/discografias.html"><img src="static/img/discografia.jpg" alt=""></a>
             <legend>DISCOGRAFIA</legend>
             <p id="descrpcion_prin">Accede a toda la discografia, si quieres escucharla solo dale play!!</p>
         </div>
         <div id="imagen_principal">
-            <a href=""><img src="integrantes.jpg" alt=""></a>
+            <a href=""><img src="static/img/integrantes.jpg" alt=""></a>
             <legend>INTEGRANTES</legend>
             <p id="descrpcion_prin">Entontra la biografia de cada uno de los integrantes</p>
         </div>
         <div id="imagen_principal">
-            <a href=""><img src="recitales.jpg" alt=""></a>
+            <a href=""><img src="static/img/recitales.jpg" alt=""></a>
             <legend>RECITALES</legend>
             <p id="descrpcion_prin">Encuentra alguno de los recitales, puedes verlos y escucharlos cuando quieras.</p>
         </div>
